--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
   <!-- HERO SECTION -->
   <section id="hero" class="hero">
-    <div class="container">
-      <h1>Hello, Urmila Dhole</h1>
-      <p>A JAVA Developer </p>
+    <div class="container"> 
+      <h1>Hello, I'm Urmila Dhole</h1>
+      <p>A Java Developer </p>
       <a href="#projects" class="btn">View My Work</a>
     </div>
   </section>
@@ -49,11 +49,11 @@
     <div class="container">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="C:/Users/Urmila/Downloads/UD-old-logo.png" alt="Profile Picture">
+       <img src="images/profile.png" alt="">
 
         <div>
           <p>
-            I’m a passionate JAVA developer with experience in creating
+            I’m a passionate Java developer with experience in creating
             responsive and visually appealing applications.
           </p>
         </div>
@@ -81,7 +81,7 @@
 
       <div class="projects-grid">
         <div class="project-card">
-          <img src="images/project1.jpg" alt="Project 1">
+          <img src="images/Project1.png" alt="Project 1">
           <h3>E-commerce website</h3>
           <p>E-commerce platform with user authentication, product listings, and shopping cart functionality.</p>
         </div>
