--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div class="container">
       <h2>Skills</h2>
       <ul class="skills-list">
-        
+
         <li>HTML5</li>
-        <li>CSS3 / Flexbox / Grid</li>
+        <li>CSS3 </li>
         <li>JavaScript</li>
         <li>Git / GitHub</li>
       </ul>
